fix delete records by values

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ classifiers =
 
 [options]
 packages =
-    sqlalchmize
+    sqlalchemize
 install_requires =
     SQLAlchemy
 python_requires = >=3.9
