--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = sqlalchemize
-version = 0.0.6
+version = 0.1.0
 description = Make changes to sql tables using SqlAlchmey
 author = Odos Matthews
 license = MIT
@@ -18,6 +18,7 @@ packages =
     sqlalchemize
 install_requires =
     SQLAlchemy
+    tinytim
 python_requires = >=3.9
 package_dir =
     =src
