--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = sqlalchemize
-version = 0.3.0
+version = 0.3.1
 description = Make changes to sql tables using SqlAlchmey
 author = Odos Matthews
 license = MIT
@@ -9,6 +9,7 @@ platforms = unix, linux, osx, cygwin, win32
 classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
 
@@ -19,7 +20,7 @@ packages =
 install_requires =
     SQLAlchemy
     tinytim
-python_requires = >=3.9
+python_requires = >=3.8
 package_dir =
     =src
 zip_safe = no
