--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,8 @@ testing =
     mypy>=0.910
     flake8>=3.9
     tox>=3.24
+    pytest==6.2.5
+    pytest-cov==2.12.1
 
 [options.package_data]
 trashpandas = py.typed
