set sqlalchemy requirement to 1.4.46

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,7 @@ classifiers =
 packages =
     sqlalchemize
 install_requires =
-    SQLAlchemy
+    SQLAlchemy==1.4.46
     tinytim
     frozendict
 python_requires = >=3.8
