--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = sqlalchemize
-version = 0.7.1
+name = fullmetalalchemy
+version = 0.7.2
 description = Make changes to sql tables using SqlAlchmey
 author = Odos Matthews
 license = MIT
@@ -16,7 +16,7 @@ classifiers =
 
 [options]
 packages =
-    sqlalchemize
+    fullmetalalchemy
 install_requires =
     SQLAlchemy==1.4.46
     tinytim
