--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = fullmetalalchemy
-version = 0.7.2
-description = Make changes to sql tables using SqlAlchmey
+version = 1.0.0
+description = Easy to use functions for making changes to sql tables using SqlAlchemy.
 author = Odos Matthews
 license = MIT
 license_file = LICENSE
