--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = fullmetalalchemy
-version = 1.0.0
+version = 2.0.0
 description = Easy to use functions for making changes to sql tables using SqlAlchemy.
 author = Odos Matthews
 license = MIT
@@ -17,7 +17,7 @@ classifiers =
 packages =
     fullmetalalchemy
 install_requires =
-    SQLAlchemy==1.4.46
+    SQLAlchemy
     tinytim
     frozendict
 python_requires = >=3.8
