--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,9 @@
 [metadata]
 name = fullmetalalchemy
-version = 1.0.0
+version = 1.1.0
 description = Easy to use functions for making changes to sql tables using SqlAlchemy.
+long_description = file: README.md
+long_description_content_type = text/markdown; charset=UTF-8
 author = Odos Matthews
 license = MIT
 license_file = LICENSE
