--- a/tox.ini
+++ b/tox.ini
@@ -1,27 +1,32 @@
 [tox]
-minversion = 3.8.0
-envlist = py38, flake8, mypy
+minversion = 4.0.0
+envlist = py{38,39,310,311,312,313}, ruff, mypy
 isolated_build = true
 
 [gh-actions]
 python =
     3.8: py38
+    3.9: py39
+    3.10: py310
+    3.11: py311
+    3.12: py312
+    3.13: py313
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
-deps =
-    -r{toxinidir}/requirements_dev.txt
+extras = testing
 commands =
-    pytest --basetemp={envtmpdir}
+    pytest --basetemp={envtmpdir} --cov
 
-[testenv:flake8]
-basepython = python3.8
-deps = flake8
-commands = flake8 src tests
+[testenv:ruff]
+basepython = python3.11
+extras = dev
+commands =
+    ruff check src tests
+    ruff format --check src tests
 
 [testenv:mypy]
-basepython = python3.8
-deps =
-    -r{toxinidir}/requirements_dev.txt
-commands = mypy src
+basepython = python3.11
+extras = dev
+commands = mypy src/fullmetalalchemy
