feat: Add async/await support with minimal code duplication (v2.1.0)
- Add full async/await support via async_api namespace
- Create internal shared logic modules to minimize duplication
- Implement async versions of select, insert, update, delete, create, drop
- Add comprehensive async test suite (23 tests, 70%+ coverage)
- Make async dependencies optional (pip install fullmetalalchemy[async])
- Maintain 100% backward compatibility (all 258 sync tests pass)
- Pass MyPy strict mode and Ruff checks
- Update CHANGELOG with v2.1.0 features

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "fullmetalalchemy"
-version = "2.0.0"
+version = "2.1.0"
 description = "Easy-to-use helpers for SQL table changes with SQLAlchemy."
 readme = "README.md"
 authors = [
@@ -37,9 +37,18 @@ testing = [
     "pytest>=8",
     "pytest-cov>=4",
 ]
+async = [
+    "greenlet>=3.0",
+    "aiosqlite>=0.19",
+    "asyncpg>=0.29",
+    "aiomysql>=0.2",
+]
 dev = [
     "pytest>=8",
     "pytest-cov>=4",
+    "pytest-asyncio>=0.23",
+    "greenlet>=3.0",
+    "aiosqlite>=0.19",
     "mypy>=1.10",
     "ruff>=0.6",
     "tox>=4",
@@ -62,6 +71,8 @@ fullmetalalchemy = ["py.typed"]
 [tool.pytest.ini_options]
 addopts = "--cov=fullmetalalchemy"
 testpaths = ["tests"]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
 
 [tool.coverage.run]
 branch = true
