fix: Move async dependencies to optional testing extras
- Move aiosqlite, greenlet to testing dependencies
- Keep base package lightweight for sync-only users
- Verified: All 258 sync tests pass without async deps
- Verified: All 281 tests pass with async deps installed

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,9 @@ dependencies = [
 testing = [
     "pytest>=8",
     "pytest-cov>=4",
+    "pytest-asyncio>=0.23",
+    "greenlet>=3.0",
+    "aiosqlite>=0.19",
 ]
 async = [
     "greenlet>=3.0",
