--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 4.0.0
-envlist = py{38,39,310,311,312,313}, ruff, mypy
+envlist = py{38,39,310,311,312,313}, py{38,39,310,311,312,313}-postgres, py{38,39,310,311,312,313}-mysql, py{38,39,310,311,312,313}-multidb, ruff, mypy
 isolated_build = true
 
 [gh-actions]
@@ -30,3 +30,24 @@ commands =
 basepython = python3.11
 extras = dev
 commands = mypy src/fullmetalalchemy
+
+[testenv:py{38,39,310,311,312,313}-postgres]
+setenv =
+    PYTHONPATH = {toxinidir}
+extras = testing
+commands =
+    pytest -m postgres --basetemp={envtmpdir} --cov
+
+[testenv:py{38,39,310,311,312,313}-mysql]
+setenv =
+    PYTHONPATH = {toxinidir}
+extras = testing
+commands =
+    pytest -m mysql --basetemp={envtmpdir} --cov
+
+[testenv:py{38,39,310,311,312,313}-multidb]
+setenv =
+    PYTHONPATH = {toxinidir}
+extras = testing
+commands =
+    pytest -m multidb --basetemp={envtmpdir} --cov
