--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "fullmetalalchemy"
-version = "2.5.0"
+version = "2.6.0"
 description = "Easy-to-use helpers for SQL table changes with SQLAlchemy."
 readme = "README.md"
 authors = [
@@ -39,6 +39,10 @@ testing = [
     "pytest-asyncio>=0.23",
     "greenlet>=3.0",
     "aiosqlite>=0.19",
+    "psycopg[binary]>=3.1",
+    "PyMySQL>=1.1",
+    "testing.postgresql>=1.3",
+    "testing.mysqld>=1.4",
 ]
 async = [
     "greenlet>=3.0",
@@ -54,6 +58,7 @@ dev = [
     "aiosqlite>=0.19",
     "mypy>=1.10",
     "ruff>=0.6",
+    "ty>=0.1",
     "tox>=4",
 ]
 pandas = [
@@ -79,6 +84,11 @@ addopts = "--cov=fullmetalalchemy"
 testpaths = ["tests"]
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "function"
+markers = [
+    "postgres: tests that require a PostgreSQL instance",
+    "mysql: tests that require a MySQL instance",
+    "multidb: tests that run across multiple database backends",
+]
 
 [tool.coverage.run]
 branch = true
@@ -114,3 +124,11 @@ ignore = ["UP006", "UP007", "UP035", "UP045"]
 quote-style = "double"
 indent-style = "space"
 line-ending = "lf"
+
+[tool.ty.src]
+include = ["src/fullmetalalchemy"]
+exclude = ["docs/**", "tests/**"]
+
+[tool.ty]
+
+# (ty config is above; remove duplicate/old keys)
